# pyseltongue

./: .gitattributes  AUTHORS  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini  unit_tests.py
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  pythonpublish.yml  unittests.yml
pyseltongue/: __init__.py  _version.py  polynomials.py  primes.py  sharing.py
test/: test_base.py  test_bitb32.py  test_bitb58.py  test_bitzb32.py  test_plaintext.py  test_secretshare.py
