[metadata]
name = pyseltongue
author = nginsburg
author_email = ginsburgnm@gmail.com
url = https://github.com/ginsburgnm/pyseltongue
description = "Tools for sharing secrets (like Bitcoin private keys) using shamir's secret sharing scheme."
long_description = file: README.md
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security :: Cryptography

[versioneer]
VCS = git
style = pep440
versionfile_source = pyseltongue/_version.py
versionfile_build = pyseltongue/_version.py
tag_prefix =
parentdir_prefix = pyseltongue-
